# manim-widget

./: .gitignore  .gitmodules  AGENTS.md  FINDINGS.md  README.md  TODO.md  pyproject.toml  smoke_test.js  spec.json  summary.md  test_mathtex.json
.github/.workflows/: publish.yml
.github/workflows/: publish.yml
examples/: README.md  boolean_operations.py  brace_annotation.py  cyclic_replace_demo.py  fov_demo.html  group_objects.py  image_gradient.py  latex_scale.py  logo.py  no_animation.py  point_moving_on_shapes.py  point_with_trace.py  polygon_on_axes.py  rotate_3d.py  swap_demo.py  tex_example.py  vector_arrow.py  zy_cnn_parallelepipeds.py
js/: package.json
js-old/src/: index.js
js/src/: cli.js  index.js  player.js  registry.js  test_cli.js
notebooks/: test.py
scripts/: debug_pure_manim_web_transform.html  debug_scene_example.py  debug_scene_server.py
src/manim_widget/: __init__.py  patches.py  renderer.py  serializer.py  snapshot.py  tex_patch.py  widget.py
src/manim_widget/static/: index.js
tests/: test_js_integration.py  test_manim_behavior.py  test_patches.py  test_playwright_integration.py  test_renderer.py  test_serializer.py  test_widget.py
tests/fixtures/: circle_scene.json
