[project]
name = "manim-widget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonin P", email = "antonin.peronnet@telecom-paris.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "manim>=0.20.1",
]

[build-system]
requires = ["hatchling", "hatch-jupyter-builder>=0.5.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.21.1",
    "pytest>=8.0.0",
    "ruff>=0.15.8",
]

[tool.hatch.build]
artifacts = ["src/manim_widget/static/*.js"]

#[tool.hatch.build.hooks.jupyter-builder]
#build-function = "hatch_jupyter_builder.npm_builder"
#ensured-targets = ["src/manim_widget/static/index.js"]
#skip-if-exists = ["src/manim_widget/static/index.js"]
#dependencies = ["hatch-jupyter-builder>=0.5.0"]

#[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
#npm = "bun"
#build_cmd = "build"
