[project]
name = "manim-widget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonin P", email = "antonin.peronnet@telecom-paris.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "manim>=0.20.1",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "marimo>=0.21.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
